chandeliers-lus/tests/compile_fail/ui/clk/inhomogeneous-tup.stderr
error: Two subexpressions have different clocks: '_ and 'when b are incompatible
 --> tests/compile_fail/ui/clk/inhomogeneous-tup.rs:6:18
  |
6 |     let (m, n) = (1, 2 when b); tel;
  |                  ^^^^^^^^^^^^^
  |
note: This is clocked by '_
 --> tests/compile_fail/ui/clk/inhomogeneous-tup.rs:6:19
  |
6 |     let (m, n) = (1, 2 when b); tel;
  |                   ^
note: This is clocked by 'when b
 --> tests/compile_fail/ui/clk/inhomogeneous-tup.rs:6:22
  |
6 |     let (m, n) = (1, 2 when b); tel;
  |                      ^^^^^^^^
note: defined here
 --> tests/compile_fail/ui/clk/inhomogeneous-tup.rs:6:29
  |
6 |     let (m, n) = (1, 2 when b); tel;
  |                             ^
  = note: some operations (notably assignment) have stricter requirements than others on clock equality
  = note: you may need to insert a `when` operator
